# mrr_waterfall_dbt

./: README.md  data_loader.py  docker-compose.yml  pyproject.toml
oxylabs/: README.md  dbt_project.yml  profiles.yml
oxylabs/models/bronze/: bronze_accounts.sql  bronze_churn_events.sql  bronze_feature_usage.sql  bronze_subscriptions.sql  bronze_support_tickets.sql  properties.yml
oxylabs/models/gold/: gold_mrr_waterfall.sql  properties.yml
oxylabs/models/silver/: properties.yml  silver_account_month_mrr.sql  silver_accounts.sql  silver_subscriptions.sql
oxylabs/models/source/: sources.yml
oxylabs/tests/: gold_mrr_waterfall_reconsilation.sql  silver_account_month_mrr.sql  unique_account_month.sql
slides/: oxylabs_technical_task.pptx
